<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_user" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="45dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"

        android:inputType="textPersonName"
        android:hint="@string/name" />
    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_email_black_24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:hint="@string/email" />
    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        android:textColorHint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:hint="@string/password" />
    <EditText
        android:id="@+id/conpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:textColorHint="@color/colorPrimary"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="15dp"
        android:padding="15dp"
        android:inputType="textPersonName"
        android:hint="@string/conpassword" />
    <Button
        android:id="@+id/btnregister"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="22sp"
        android:layout_gravity="center"
        android:textColor="@color/white"/>

    <TextView
        android:id="@+id/go"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tt"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="50dp"
        android:layout_gravity="center"
        android:textSize="16sp"/>

</LinearLayout>